...
          title: Text('Are you sure?'),
          actions: <Widget>[
            OutlineButton(
              color: Theme.of(context).primaryColor,
              highlightedBorderColor: Theme.of(context).primaryColor,
              textColor: Theme.of(context).primaryColor,
              key: Key('confirmBtn'),
              child: Text(confirmText),
              onPressed: onConfirmed,
            ),
            FlatButton(
              color: Colors.white,
              textColor: Theme.of(context).primaryColor,
...
