...
            key: Key('waiting_for_gameId_to_start_screen'),
            appBar: AppBar(
              automaticallyImplyLeading: false,
              title: Text('Choosing tagger...'),
              actions: [
                FlatButton.icon(
                  key: Key('waiting_screen_quit_btn'),
                  label: Text('leave'),
                  icon: Icon(Icons.exit_to_app),
                  onPressed: () {
                    // handle player leaving game
                    // TODO: if admin leaving, force all players to quit and redirect to lobby

...
