...
                        onPressed: () {
                          context
                              .read<Navigation>()
                              .navigateTo(CreateAccountScreen.routeName);
                        },
                        child: Text(
                          'Create account',
                          style: TextStyle(color: Colors.white),
                        ),
                      ),
                      Text('or', style: TextStyle(color: Colors.white)),
                      OutlineButton(
                        key: navigateToSignInBtn,
...
